<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.logindemo.MainActivity">
    <ImageView
        android:layout_marginTop="@dimen/dp_40px"
        android:layout_marginLeft="@dimen/dp_30px"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:id="@+id/img_return"
        android:src="@mipmap/login_wrong"
        />
    <TextView
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_38px"
        android:layout_marginTop="@dimen/dp_50px"
        />
    <EditText
        android:id="@+id/phone"
        android:layout_marginTop="@dimen/dp_120px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30px"
        android:layout_marginRight="@dimen/dp_30px"
        android:hint="@string/phone">
    </EditText>
    <LinearLayout
        android:layout_marginLeft="@dimen/dp_30px"
        android:layout_marginRight="@dimen/dp_30px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_76px"
        >
    <EditText
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:hint="@string/verification_code"
        android:id="@+id/import_verification_code"
        />
        <EditText
            android:id="@+id/verification_code"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp_15"
        android:text="@string/hint"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20px"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_90px"
        android:text="@string/login"
        android:background="@drawable/selector_btn_bg"
        android:layout_marginLeft="@dimen/dp_30px"
        android:id="@+id/btn"
        android:layout_marginTop="@dimen/dp_20px"
        android:layout_marginRight="@dimen/dp_30px"
        />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_horizontal"
       android:layout_marginTop="@dimen/dp_38px"
       >
       <CheckBox
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/checkbox"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/consent"
           />
   </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_372px"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/colorPrimary"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_58px"
            android:layout_marginRight="@dimen/dp_58px"
            ></View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_3f"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:paddingRight="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            />
    </RelativeLayout>

 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:layout_marginTop="@dimen/dp_20"
     >
     <ImageView
         android:layout_marginLeft="@dimen/dp_146px"
         android:layout_marginTop="@dimen/dp_48px"
         android:layout_width="@dimen/dp_40px"
         android:layout_height="@dimen/dp_40px"
         android:src="@mipmap/wechat_image"
         android:id="@+id/wechat_login"
         android:layout_marginBottom="@dimen/dp_20px"
         />
     <ImageView
         android:layout_marginTop="@dimen/dp_48px"
         android:layout_width="@dimen/dp_40px"
         android:layout_height="@dimen/dp_40px"
         android:src="@mipmap/qq_image"
         android:id="@+id/qq_login"
         android:layout_toRightOf="@id/wechat_login"
         android:layout_marginLeft="@dimen/dp_120px"
         android:layout_marginRight="@dimen/dp_120px"
         android:layout_marginBottom="@dimen/dp_20px"
         />
     <ImageView
         android:layout_marginRight="@dimen/dp_146px"
         android:layout_marginTop="@dimen/dp_48px"
         android:layout_width="@dimen/dp_40px"
         android:layout_height="@dimen/dp_40px"
         android:src="@mipmap/login_xinlang"
         android:id="@+id/xinlang_login"
         android:layout_toRightOf="@id/qq_login"
         android:layout_marginBottom="@dimen/dp_20px"
         />
 </RelativeLayout>
</LinearLayout>